# diamants-collab

./: .env.template  .gitignore  ARCHITECTURE.md  Architecture.md  CONTRIBUTING.md  Collective-Intelligence.md  Contributing.md  DIAMANTS_TECH_STACK.md  Home.md  Installation.md  Known-Issues.md  LICENSE  Launch-Guide.md  README.md  README_NEW.md  SECURITY_AUDIT.md  TODO.md  _launch_pipeline.sh  check_ros_processes.sh  diamants-collab.code-workspace  launch_backend.sh  launch_diamants.sh  launch_diamants_full.sh  run.sh  stop_diamants.sh  validate_diamants.sh
DEMO/: GitHub_Video_Integration_Guide.md  YouTube_Integration_Guide.md
DIAMANTS_API/: README.md  check.sh  launcher.py  migrate-websockets.sh  stop.sh  (+7 more)
DIAMANTS_BACKEND/ros2_microservices/: README.md  package.xml  setup.cfg  setup.py
DIAMANTS_BACKEND/ros2_microservices/config/: diamants_params.yaml
DIAMANTS_BACKEND/ros2_microservices/diamants_microservices/: __init__.py  mission_coordinator.py  position_broadcaster.py  slam_fusion.py  swarm_controller.py
DIAMANTS_BACKEND/ros2_microservices/launch/: diamants_full.launch.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/diamants_missions/: CMakeLists.txt  package.xml
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/diamants_missions/launch/: run_mission.launch.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/diamants_missions/missions/: mission_exploration_intelligente.yaml  mission_exploration_simple.yaml  mission_real_simple_mapper.yaml  mission_sim_multi_crazy.yaml  mission_sim_multi_crazy_headless.yaml
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/: API_REFERENCE.md  CMakeLists.txt  README_MULTI_AGENT_FRAMEWORK.md  TECHNICAL_SPECIFICATION.md  package.xml
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/config/: diamants_v3_no_flicker.rviz
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/launch/: anti_collision_diamants.launch.py  diamants_v3_no_flicker.launch.py  web_interface.launch.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/: __init__.py  anti_collision_diamants.py  mission_test_web.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/swarm_intelligence/: __init__.py  flight_controller.py  intelligence_monitor.py  swarm_behavior.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/web_interface/: diamant_launcher.py  test_server.py  web_server.py  web_server_robust.py  websocket_bridge.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/web_interface/static/css/: dashboard.css  style.css
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/web_interface/static/js/: 3d-visualization.js  dashboard.js  diamant-enhanced-3d.js  three.min.js  websocket-client.js
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/multi_agent_framework/web_interface/templates/: dashboard.html
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/multi_agent_framework/scripts/: drone_position_coordinator.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/slam_map_merge/: package.xml  setup.cfg  setup.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/slam_map_merge/config/: map_merger_config.yaml  map_merger_config.yaml.backup  modular_ultra_permissive.yaml  original_restrictive.yaml  simulation_4_drones.yaml  swarm_8_drones.yaml  swarm_8_drones_realtime.yaml  swarm_8_drones_ultra_robuste.yaml  swarm_8_drones_ultra_robuste.yaml.backup  swarm_8_drones_ultra_robuste_fixed.yaml  swarm_8_drones_ultra_robuste_simple.yaml
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/slam_map_merge/launch/: map_merge.launch.py  map_merge_compare.launch.py  multi_agent_diamants.launch.py
DIAMANTS_BACKEND/slam_collaboratif/ros2_ws/src/slam_map_merge/slam_map_merge/: coverage_image_publisher.py  map_merger_node.py  map_merger_node_modular.py  ultra_robust_golden_zones.py  utils.py
(+580 files in other folders)
