<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diamants_microservices</name>
  <version>1.0.0</version>
  <description>DIAMANTS - Drone Intelligence for Advanced Mapping and Navigation Through Swarms - ROS2 Microservices</description>
  <maintainer email="diamants@project.dev">DIAMANTS Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_crazyflie_gazebo</exec_depend>
  <exec_depend>ros_gz_crazyflie_bringup</exec_depend>
  <exec_depend>ros_gz_crazyflie_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
