<?xml version="1.0"?>
<package format="3">
    <name>diamants_missions</name>
    <version>0.1.0</version>
    <description>Mission system for DIAMANTS V3: scenario YAMLs and generic launch for ROS2/Gazebo.</description>
    <maintainer email="maintainer@example.com">DIAMANTS Team</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>yaml_cpp_vendor</exec_depend>
    <exec_depend>python3-yaml</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>