<?xml version="1.0"?>
<package format="3">
  <name>slam_map_merge</name>
  <version>0.0.1</version>
  <description>Multi-robot map merging for DIAMANTS</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
